# telegram-bot

./: .gitignore  Dockerfile  README.MD  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  docker-build.yml
comandos/: __init__.py  beep.py  button.py  echo.py  prueba_botón.py  start.py  temp.py
funciones/: __init__.py  get_bot_token.py  temperatura.py
tests/: test_beep.py  test_main.py
