[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram_bot"
version = "0.1.0"
description = "Bot de telegram experimental"
authors = [
    { name = "Manuel Palmero", email = "manueligna06@gmail.com" }
]
readme = "README.MD"
license = { file = "LICENSE" }
requires-python = ">=3.6"
dependencies = [
    "python-telegram-bot",
]

[project.urls]
Homepage = "https://github.com/manu-palmero/telegram-bot"
Documentation = "https://github.com/manu-palmero/telegram-bot/wiki"
Source = "https://github.com/manu-palmero/telegram-bot"
Tracker = "https://github.com/manu-palmero/telegram-bot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["comandos*", "funciones*"]
